tests/machine/x/clj/left_join_multi.error
exit status 1
Syntax error reading source at (/workspace/mochi/tests/machine/x/clj/left_join_multi.clj:96:1).
EOF while reading, starting at line 27

Full report at:
/tmp/clojure-15858623216627439281.edn
